# nereo_rov_code

./: .gitignore  LICENSE  README.md  nereo_ros_package_installer.sh
SETUP_RPI/: setup_rpi.md  setup_rpi.sh  tmux.conf
control_station_ws/src/nereo_pkg/nereo_pkg/: gui.py
interfaces_ws/nereo_interfaces/: package.xml
interfaces_ws/nereo_interfaces/srv/: set_navigation_mode.srv
nereo_interfaces/: CMakeLists.txt
nereo_interfaces/msg/: thruster_status.msg
raspberry_pi_ws/src/nereo_sensors_pkg/include/nereo_sensors_pkg/: barPub.hpp
raspberry_pi_ws/src/nereo_sensors_pkg/include/nereo_sensors_pkg/imu_libs/: WT61P.h
raspberry_pi_ws/src/nereo_sensors_pkg/src/barometer_sources/: raspberrypi4b_driver_ms5837_interface.c
ros2_ws/src/nereo_sensors_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/nereo_sensors_pkg/include/nereo_sensors_pkg/: barPub.hpp  imuPub.hpp
ros2_ws/src/nereo_sensors_pkg/include/nereo_sensors_pkg/imu_libs/: i2c.h
ros2_ws/src/nereo_sensors_pkg/src/: barPub.cpp  imuPub.cpp
ros2_ws/src/nereo_sensors_pkg/src/barometer_sources/: driver_ms5837.c  iic.c
ros2_ws/src/nereo_sensors_pkg/src/imu_sources/: WT61P.c  i2c.c  wit_c_sdk.c
src/nereo_interfaces/: CMakeLists.txt  package.xml
src/nereo_interfaces/msg/: BarData.msg  ImuData.msg  PeripheralStatus.msg  ThrusterStatus.msg
src/nereo_interfaces/srv/: ChangePIConstants.srv  ResetIMUCalibration.srv  ResetIMUCalibration.srvZone.Identifier  StartROV.srv
src/nereo_pkg/: package.xml  setup.cfg  setup.py
src/nereo_pkg/launch/: control_station.launch.py  rov.launch.py
src/nereo_pkg/nereo_pkg/: IMU.py  PI_controller.py  camera1_pub.py  gui.py
src/nereo_sensors_pkg/: CMakeLists.txt  package.xml
src/nereo_sensors_pkg/include/nereo_sensors_pkg/: REG.h  barPub.hpp  imuPub.hpp  ms5837.h  wit_lib.hpp
src/nereo_sensors_pkg/include/nereo_sensors_pkg/imu_libs/: REG.h  WIT61P.h
src/nereo_sensors_pkg/src/: barPub.cpp  iic.c  imuPub.cpp  ms5837.c  raspberrypi4b_driver_ms5837_interface.c  wit_lib.cpp
src/nereo_sensors_pkg/src/barometer_sources/: driver_ms5837_basic.c
src/nereo_sensors_pkg/src/imu_sources/: WIT61P.c  WT61P.c
src/sensors_pkg/: CMakeLists.txt  package.xml
src/sensors_pkg/lib/MS5837/: ms5837.c  ms5837.h
src/sensors_pkg/lib/imu_data/: imu_data.cpp  imu_data.h
src/sensors_pkg/lib/wit_lib/: wit_lib.cpp  wit_lib.cppZone.Identifier  wit_lib.h
src/sensors_pkg/src/: barPub copy.cpp  barPub.cpp  imuPub copy.cpp  imuPub.cpp
unit_tests/barometer_unit_test/: CMakeLists.txt  Makefile  barPub.cpp  barometer_unit_test  driver_ms5837.c  driver_ms5837_basic.c
unit_tests/barometer_unit_test/nereo_sensors_pkg/: barPub.hpp
unit_tests/imu_unit_test/: CMakeLists.txt  Makefile  imu_unit_test
unit_tests/imu_unit_test/include/nereo_sensors_pkg/: imuPub.hpp
unit_tests/imu_unit_test/src/: imuPub.cpp
unit_tests/imu_unit_test/src/imu_sources/: WT61P.c
