<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nereo_pkg</name>
  <version>0.0.0</version>
  <description>All the ROS files needed to run Nereo ROV</description>
  <maintainer email="michele.carenini@studenti.polito.it">Michele Carenini</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>numpy</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tk</depend>
  <depend>customtkinter</depend>
  <depend>Pillow</depend>
  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>time</depend>
  <depend>threading</depend>

  <exec_depend>nereo_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
